--- a/css/imc.css
+++ b/css/imc.css
@@ -88,14 +88,48 @@ form label, form legend{
     transform: scale(1.1);
     transition: 1s transform;
 }
+@media screen and (max-width: 1024px) {
 
+    .enviar{
+        width: 60%;
+    }
+}
+@media screen and (max-width: 800px) {
+    .formulario{
+        position: relative;
+        display: block;
+       
+    }
+    form,.resultado{
+        justify-content: center;
+        align-items: center;
+        width: 90%;
+        margin: 2em auto 2em auto;
+
+    }
+    .enviar{
+        width: 50%;
+        font-size: 16px;
+        margin: 0 auto;
+    }
+}
 @media screen and (max-width: 480px) {
     .enviar{
         font-size: 16px;
     }
+    .imc{
+        font-size: 3.5em;
+    }
+    .classificacao{
+        font-size: 1.5em;
+    }
+    .risco{
+        font-size: 0.8em;
+    }
 }
 
 @media screen and (max-width: 380px) {
+
     .enviar{
         font-size: 14px;
     }
