--- a/css/nav-footer.css
+++ b/css/nav-footer.css
@@ -46,7 +46,77 @@ footer{
     font-size: 13px;
     margin-top: 20px;
 }
+.side-bar{
+    position: fixed;
+    display: inline;
+    flex-direction: column;
+    z-index: 20;
+    width: 5px;
+    font-size: 3.5em;
+    height: 250px;
+    background-color: #fafafa;
+    border-radius: 0px 10px 10px 0px;
+    border-right:  5px solid black;
+    transition: 0.5s;
+    transition-delay: 0.25s;
+    justify-content: center;
+}
+.side-bar ul{
+    position: relative;
+    text-align: center;
+    padding-top: 10px;
+    transform: scaleX(0);
+    transition: 0.5s;
+    transition-delay: 0.25s;
+}
+.side-bar a{
+    text-decoration: none;
+}
+/* .side-bar a:visited {
+    color:#0A66C2;
+    text-decoration: ;
+    list-style: none;
+} */
 
+.side-bar:hover{
+    border-top:2px solid black ;
+    border-bottom:2px solid black ;
+    width: 60px;
+    transition: 0.5s;
+    transition-delay: 0.25s;
+    background-color: #fafafa;
+}
+.side-bar:hover ul{
+    position: relative;
+    transition: 0.5s;
+    transition-delay: 0.25s;
+    transform: scaleX(1);
+    
+}
+.instagram{
+    color:#dd2a7b
+}
+.facebook{
+    color: #4f5bd5;
+}
+.github{
+    color: #333;
+}
+.linkedin{
+    color:#0A66C2;
+}
+.instagram a:visited{
+    color:#dd2a7b
+}
+.facebook a:visited{
+    color: #4f5bd5;
+}
+.github a:visited{
+    color: #333;
+}
+.linkedin a:visited{
+    color:#0A66C2;
+}
 
 @media (max-width: 800px){
     
