--- a/css/criar-treino.css
+++ b/css/criar-treino.css
@@ -1,11 +1,11 @@
 
-section{
-	margin: 2em 0;
-	overflow: hidden;
-}
+/* section{
+	margin: 0em 0;
+	overflow: visible;
+} */
 
 .panilha-treino{
-    width: 1280px;
+    width: 70%;
     justify-content: center;
     align-items: center;
   
@@ -13,11 +13,15 @@ section{
 }
 .panilha-treino h2{
     padding-top: 1em;
+    padding-left: 50px;
+
     font-size: 2em;
     font-weight: bold;
 }
 .panilha-treino h3{
     font-size: 1.5em;
+    padding-left: 50px;
+
     font-weight: bold;
     color: #555555;
     padding-top:16px ;
@@ -26,6 +30,7 @@ section{
 table{
     margin: 20px 0 40px;
     justify-content: center;
+    box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.137);
 }
 thead{
     background: black;
@@ -43,6 +48,7 @@ th{
     font-size: 1.2em;
     padding: 15px 20px;
     font-family: 'Roboto', sans-serif;
+    border: 1px solid greenyellow;
 
 }
 td{
@@ -57,7 +63,7 @@ td{
     background-color: white;
 }
 .container{
-	width: 60%;
+	width: 70%;
 	height: 100%;
 	margin: 0 auto;
 }
@@ -79,6 +85,8 @@ label{
 	border: 1px solid #ccc;
 	padding: .7em;
 	width: 100%;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.137);
+
 }
 .nome, .treino{
     display: inline-block;
@@ -90,18 +98,59 @@ label{
 	width: 100%;
 	border: 1px solid #ccc;
 	padding: .7em;
-	width: 100%;
+	width: 95%;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.137);
+
 }
-.bto-secundario{
+.botao{
     display: block;
+    width: 150px;
+    height: 3em;
+    margin: 1em 0 2em 2em ;
+    background-color: orange;
+    font-weight: bold;
+    color: white;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.137);
+
+    border-radius: 5px;
+}
+.bto-secundario:hover{
+    background-color: rgb(202, 131, 0);
+    transform: scale(1.2);
+    transition: 1s;
+    transition-delay: 0.25s;
 }
 .campo-medio{
 	display: inline-block;
 	padding-right: .5em;
+    
 }
 
 .grupo{
 	width: 32%;
 	display: inline-block;
 	padding: 10px 0px;
+}
+.excluir{
+	opacity: 0;
+	transition: 0.5s;
+	/* transition-delay: 0.25s; */
+}
+@media (max-width:800px){
+    .panilha-treino{
+        width: 100%;
+        font-size: 0.8em;
+    }
+    .container{
+        width: 90%;
+    }
+    .campo{
+        width: 100%;
+    }
+}
+@media (max-width:600px){
+    th{
+        width: 12%;
+        padding: 10px 0;
+    }
 }
