--- a/css/criar-treino.css
+++ b/css/criar-treino.css
@@ -111,7 +111,7 @@ label{
     font-weight: bold;
     color: white;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.137);
-
+    cursor: pointer;
     border-radius: 5px;
 }
 .bto-secundario:hover{
