--- a/css/indice-avaliacoes.css
+++ b/css/indice-avaliacoes.css
@@ -25,6 +25,7 @@ body{
     box-shadow: 5px 5px 5px rgba(0,0,0,0.159);
     border-radius: 5px;
     font-size: 1em;
+    cursor: pointer;
 }
 .botao-treino{
     background-color: darkgreen;
